# PointCloudBenchmark

./: CMakeLists.txt  README.md  benchmark_visualization.py  point_cloud_benchmark.cpp
benchmark_results/: pointcloud_1605291270.2703269_results.txt  pointcloud_1605291270.4115014_results.txt  pointcloud_1605291270.4531968_results.txt  pointcloud_1605291270.5639296_results.txt  pointcloud_1605291270.6545172_results.txt  pointcloud_1605291270.7149012_results.txt  pointcloud_1605291270.8054738_results.txt  pointcloud_1605291270.9161913_results.txt  pointcloud_1605291270.9665213_results.txt
voxel_and_clustering_results/: 2703269_results.txt  4115014_results.txt  4531968_results.txt  5639296_results.txt  6545172_results.txt  7149012_results.txt  8054738_results.txt  9161913_results.txt  9665213_results.txt
